# freevamp

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  config.h.in  configure.in  copying.awk  copying.c  freevamp.c  fvicon.h
m4/: ChangeLog  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  freevamp.pot
